--- a/database/config.json
+++ b/database/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
-    "username": "root",
-    "password": "123456",
-    "database": "dd",
-    "host": "127.0.0.1",
+    "username": "huangyi",
+    "password": "fys@4495",
+    "database": "db",
+    "host": "rm-wz96f97v9in1b1z08wo.mysql.rds.aliyuncs.com",
     "dialect": "mysql",
     "operatorsAliases": false
   },
   "test": {
-    "username": "root",
+    "username": "huangyi",
     "password": null,
     "database": "database_test",
     "host": "127.0.0.1",
@@ -16,10 +16,10 @@
     "operatorsAliases": false
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "huangyi",
+    "password": "fys@4495",
+    "database": "db",
+    "host": "rm-wz96f97v9in1b1z08wo.mysql.rds.aliyuncs.com",
     "dialect": "mysql",
     "operatorsAliases": false
   }
