--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "egg-sequelize": "^5.1.0",
     "egg-socket.io": "^4.1.5",
     "egg-validate-joi": "^1.1.2",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "redlock": "^4.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
