--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "egg": "^2.15.1",
+    "egg-alinode": "^2.0.1",
     "egg-cors": "^2.2.0",
     "egg-mysql": "^3.0.0",
     "egg-redis": "^2.4.0",
