--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-dd",
+    "start": "egg-scripts start --sticky --daemon --title=egg-server-dd",
     "stop": "egg-scripts stop --title=egg-server-dd",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
