--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "egg-cors": "^2.2.0",
     "egg-mysql": "^3.0.0",
     "egg-redis": "^2.4.0",
+    "egg-rpc-base": "^1.3.1",
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^5.1.0",
     "egg-socket.io": "^4.1.5",
+    "egg-sofa-rpc": "^2.0.0",
     "egg-validate-joi": "^1.1.2",
     "mysql2": "^1.6.5",
     "redlock": "^4.0.0"
@@ -25,6 +27,7 @@
     "egg-bin": "^4.11.0",
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
+    "egg-rpc-generator": "^1.3.1",
     "eslint": "^5.13.0",
     "eslint-config-egg": "^7.1.0",
     "sequelize-cli": "^5.5.0"
@@ -42,7 +45,8 @@
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "rpc": "egg-rpc-generator"
   },
   "ci": {
     "version": "10"
